objects/FieldIdLookup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>lookup values for custom Field API names and field Id&apos;s. Used for creating pre-populated values for buttons</description>
    <fields>
        <fullName>FieldId__c</fullName>
        <description>Salesforce Field Id</description>
        <label>FieldId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName__c</fullName>
        <description>Name of the field</description>
        <label>FieldName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <description>Name of the object the field resides on</description>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Field Id Lookup</label>
</CustomObject>